@@ -3,6 +3,9 @@
 	* src/SDCCgen.c:
 	  don't emit leading whitespaces in inline asm, 2nd try
 	  fixed bug #3515390 - asm with leading whitespace passed to backends
+	* src/z80/peep.c: made z80instructionSize() function more
+	  ropbust: accept arbitrary number of arbitrary space characters
+	  between mnemonic and the first operand
 
 2012-04-07 Philipp Klaus Krause <pkk AT spth.de>
 
